--- a/app/blocks/long-arrow/long-arrow.scss
+++ b/app/blocks/long-arrow/long-arrow.scss
@@ -26,6 +26,29 @@
     fill: currentColor;
   }
 
+  &_h16 {
+    #{$b} {
+      &__wrapper {
+        max-width: 61px;
+        height: 16px;
+
+        @include screen('sm') {
+          height: 11px;
+        }
+      }
+
+      &__icon {
+        height: 16px;
+        width: 166px;
+
+        @include screen('sm') {
+          width: 116px;
+          height: 11px;
+        }
+      }
+    }
+  }
+
   &_big {
 
     #{$b} {
