--- a/app/pages/system/system.pug
+++ b/app/pages/system/system.pug
@@ -9,7 +9,7 @@ block content
       +e.wrapper
         +content-column-aside
         +content-column-main
-          +dialog4
+          +dialog-origin
             +e.head_mg
               +e.date host
             +e.UL.list
@@ -43,24 +43,33 @@ block content
                   +notification-footer
                     +e.subtitle You can now continue tenancy on the existing condition or create new order summary with different tenancy terms.
                     +e.buttons
-                      +button()._thin-border._thin-border_bg-white._shorter._smaller._fz14.__button Continue without changes
-                      +button()._shorter._smaller._fz14.__button Make new offer
+                      +button()._thin-border._thin-border_bg-white._shorter._smaller._fz14._mh35.__button Continue without changes
+                      +button()._shorter._smaller._fz14._mh35.__button Make new offer
                     +e.links
-                      +link._underline Terminate the contract after tenancy period ends
+                      +link._underline.__link_fz14 Terminate the contract after tenancy period ends
               +bubble('li', '15:45', "2018-10-29T15:45")._mxw488._notification._mob-notime.__item_wide
                 +notification._sys
                   +notification-head('', '', 'New offer sent to tenant')._ai-center
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
-                  +notification-content
+                  +notification-content._spt._bpb
                     +time-origin._sb.__time
                       +time-text._fz14 From:
                         +time-time._fz14(datetime="2018-10-30") 30 October 2018
-                      +long-arrow._big.__divider_dark
+                      +long-arrow._h16.__divider_dark
                       +time-text._fz14 Till
                         +time-time._fz14(datetime="2019-10-30") 30 October 2019
-                  +informer._sb._fz20._gray.__informer
+                    +e.info
+                      +e.item
+                        +e.text_fz14 Amount:
+                          b 1
+                      +e.item
+                        +e.text_fz14 New price:
+                          b &pound; 620.00 mo
+                      +e.item
+                        +e.text_fz12 Old price: &pound; 590.00 mo
+                  +informer._fz20._gray.__informer
                     +e.text
                       b Waiting for tenant to confirm new Order Summary
               +bubble('li', '15:45', "2018-10-29T15:45")._mxw488._notification._mob-notime.__item_wide
@@ -69,11 +78,11 @@ block content
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
-                  +notification-content
+                  +notification-content._spt._bpb
                     +time-origin._sb.__time
                       +time-text._fz14 From:
                         +time-time._fz14(datetime="2018-10-30") 30 October 2018
-                      +long-arrow._big.__divider_dark
+                      +long-arrow._h16.__divider_dark
                       +time-text._fz14 Till
                         +time-time._fz14(datetime="2019-10-30") 30 October 2019
                     +e.info
@@ -85,8 +94,8 @@ block content
                           b &pound; 620.00 mo
                       +e.item
                         +e.text_fz12 Old price: &pound; 590.00 mo
-                  +notification-footer
-                    +e.subtitle_green Tenant accepted your new tenancy offer.
+                  +notification-footer._spb
+                    +e.subtitle_green._sb Tenant accepted your new tenancy offer.
                       +icon('check3').__check
               +bubble('li', '15:45', "2018-10-29T15:45")._mxw488._notification._mob-notime.__item_wide
                 +notification._sys
@@ -94,11 +103,11 @@ block content
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
-                  +notification-content
+                  +notification-content._spt._bpb
                     +time-origin._sb.__time
                       +time-text._fz14 From:
                         +time-time._fz14(datetime="2018-10-30") 30 October 2018
-                      +long-arrow._big.__divider_dark
+                      +long-arrow._h16.__divider_dark
                       +time-text._fz14 Till
                         +time-time._fz14(datetime="2019-10-30") 30 October 2019
                     +e.info
@@ -110,23 +119,23 @@ block content
                           b &pound; 620.00 mo
                       +e.item
                         +e.text_fz12 Old price: &pound; 590.00 mo
-                  +notification-footer
+                  +notification-footer._bpb
                     +e.subtitle_peach Tenant declined new tenancy offer
                     +e.buttons_3btn
-                      +button()._thin-border._thin-border_bg-white._shorter._smaller._fz14.__button Continue without changes
-                      +button()._thin-border._thin-border_bg-white._shorter._smaller._fz14.__button Make new offer
-                      +button()._shorter._smaller._fz14.__button_wide Serve Notice to end contract
+                      +button()._thin-border._thin-border_bg-white._shorter._smaller._fz14._mh35.__button Continue without changes
+                      +button()._thin-border._thin-border_bg-white._shorter._smaller._fz14._mh35.__button Make new offer
+                      +button()._shorter._smaller._fz14._mh35.__button_wide Serve Notice to end contract
               +bubble('li', '15:45', "2018-10-29T15:45")._mxw488._notification._mob-notime.__item_wide
                 +notification._sys
                   +notification-head('', '', 'Tenancy ending')._ai-center
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
-                  +notification-content
+                  +notification-content._bpb
                     +e.text_fz14
                       p Current tenancy end date
                         b 30 October 2019
-                  +informer._sb._fz20._gray.__informer
+                  +informer._fs._fz20._gray.__informer
                     +e.text
                       b The tenant intends to terminate the lease at the end of the period
               +bubble('li', '15:45', "2018-10-29T15:45")._mxw488._notification._mob-notime.__item_wide
@@ -166,6 +175,8 @@ block content
                         b SP6789-1
                       p Tenancy period end at:
                         b 30 October 2019
+                  +notification-footer._bpt
+                    +e.subtitle Maybe Something will happen, maybe not! <br> We don’t know!
               +bubble('li', '15:45', "2018-10-29T15:45")._mxw488._notification._mob-notime.__item_wide
                 +notification._sys
                   +notification-head('', '', 'Your tenancy ends up soon')._ai-center
@@ -178,11 +189,11 @@ block content
                         b SP6789-1
                       p Tenancy period end at:
                         b 30 October 2019
-                  +notification-footer
+                  +notification-footer._bpt._bpb
                     +e.subtitle Blooming founders Kethsinton Street representative created a new tenancy offer for next period. What whould you like to do?
-                    +e.buttons
-                      +button()._thin-border._thin-border_bg-white._shorter._smaller._fz14.__button Leaving when tenancy ends
-                      +button()._shorter._smaller._fz14.__button Make new offer
+                    +e.buttons._smgt
+                      +button()._thin-border._thin-border_bg-white._shorter._smaller._fz14._mh35.__button Leaving when tenancy ends
+                      +button()._shorter._smaller._fz14._mh35.__button Make new offer
               +bubble('li', '15:45', "2018-10-29T15:45")._mxw488._notification._mob-notime.__item_wide
                 +notification._sys
                   +notification-head('', '', 'Your tenancy ends up soon')._ai-center
@@ -195,12 +206,12 @@ block content
                         b SP6789-1
                       p Tenancy period end at:
                         b 30 October 2019
-                  +notification-footer
+                  +notification-footer._bpt
                     +e.subtitle Blooming founders Kethsinton Street representative created a new tenancy offer for next period. What whould you like to do?
-                    +e.buttons
-                      +button()._thin-border._thin-border_bg-white._shorter._smaller._fz14.__button Leaving when tenancy ends
-                      +button()._shorter._smaller._fz14.__button Make new offer
-                  +informer._fz14._gray.__informer
+                    +e.buttons._smgt
+                      +button()._thin-border._thin-border_bg-white._shorter._smaller._fz14._mh35.__button Leaving when tenancy ends
+                      +button()._shorter._smaller._fz14._mh35.__button Make new offer
+                  +informer._fs._fz14._gray.__informer_smpd
                     +icon('exclamation').__icon_exc
                     +e.text Please note that at the en of this tenancy period you must leave space in case you don’t accept new tenancy offer.
               +bubble('li', '15:45', "2018-10-29T15:45")._mxw488._notification._mob-notime.__item_wide
@@ -211,18 +222,17 @@ block content
                       +e.title._fz13._dark2 HOT DESK
                   +notification-content
                     +e.subtitle What’s next?
-                    +e.text_fz14
-                      p Your tenancy period will end up at: <b>30 May 2020</b>
-                      p You are always welcome to search for new workspace at Spacepool
-                      p Feel free to discuss all tenancy questions using this chat
+                    +e.UL.list
+                      li Your tenancy period will end up at: <b>30 May 2020</b>
+                      li You are always welcome to search for new workspace at Spacepool
+                      li Feel free to discuss all tenancy questions using this chat
               +bubble('li', '15:45', "2018-10-29T15:45")._mxw488._notification._mob-notime.__item_wide
                 +notification._sys
                   +notification-head('', '', 'You declined offer')._ai-center
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
-                  +notification-content
-                    +e.subtitle What’s next?
+                  +notification-content._bpb
                     +e.text_fz14
                       p Feel free to discuss the terms of the contract with the manager
                       p The existing lease contract will be active up to <b>30 May 2020</b>
@@ -232,10 +242,10 @@ block content
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
-                  +informer._fz20._gray.__informer
+                  +informer._fs._fz20._gray.__informer_pd20
                     +icon('exclamation').__icon_exc
                     +e.text The host sent you an tenancy ending notice.
-                  +notification-content
+                  +notification-content._mpb._bpt
                     +e.text_fz14
                       p The current lease is valid for the <b>next 3 months, starting from that point.</b>
                       p You are obliged to leave the rented premises on 24 December 2019.
@@ -249,7 +259,7 @@ block content
                     +time-origin._sb.__time
                       +time-text._fz14 From:
                         +time-time._fz14(datetime="2018-10-30") 30 October 2018
-                      +long-arrow._big.__divider_dark
+                      +long-arrow._h16.__divider_dark
                       +time-text._fz14 Till
                         +time-time._fz14(datetime="2019-10-30") 30 October 2019
                     +e.info
@@ -259,8 +269,8 @@ block content
                       +e.item
                         +e.text_fz14 Price:
                           b &pound; 620.00 mo
-                  +notification-footer
-                    +e.subtitle_green You accepted new tenancy terms
+                  +notification-footer._spb
+                    +e.subtitle_green._sb You accepted new tenancy terms
                       +icon('check3').__check
               +bubble('li', '15:45', "2018-10-29T15:45")._mxw488._notification._mob-notime.__item_wide
                 +notification._sys
@@ -268,11 +278,11 @@ block content
                     +offer-info
                       +box._size16._orange
                       +e.title._fz13._dark2 HOT DESK
-                  +notification-content
+                  +notification-content._mpt
                     +e.subtitle
                       p Your tenancy period has ended.
                       p We sincerely hope that we have been useful to you all this time. We appreciate you using Spacepool services.
                     +e.text_fz14
                       p Remember that you can always find a new place for your business.
-                    +e.buttons
-                      +button()._shorter._smaller._fz14.__button_wide Go find new Space
+                    +e.buttons._smgt
+                      +button()._shorter._smaller._fz14._mh35.__button_wide Go find new Space
