--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -56,6 +56,10 @@
     font-weight: 700;
   }
 
+  &_dark {
+    color: $color-input-dark;
+  }
+
   .is-top & {
     border-bottom-color: $color-basic;
   }
@@ -320,7 +324,6 @@
   border-radius: 0;
   transition: opacity $ease-main, transform $ease-main, left 0s $ease-main;
   font-family: $font-main;
-  z-index: 10;
 
   &.-from-bottom- {
     transform: translateY(8px);
