--- a/app/blocks/long-arrow/long-arrow.scss
+++ b/app/blocks/long-arrow/long-arrow.scss
@@ -49,6 +49,27 @@
     }
   }
 
+  &_dark {
+    color: $color-black;
+  }
+
+  &_short {
+    #{$b} {
+
+      &__wrapper {
+        max-width: 40px;
+      }
+    }
+  }
+
+  &_long {
+    #{$b} {
+      &__wrapper {
+        max-width: 91px;
+      }
+    }
+  }
+
   &_big {
 
     #{$b} {
