--- a/app/components/popup-warning/popup-warning.pug
+++ b/app/components/popup-warning/popup-warning.pug
@@ -8,5 +8,5 @@ mixin popup-warning()
       +note(true)._fz30._fz30_lh42._strong.__alert_mx430 Changing company information will result in a KYC reset.
       +note(true)._fz30._fw400._sm-pmg.__notice To continue receiving payments, you will need to resubmit all company information in the KYC tab.
       +e.buttons
-        +button()._short._border._border_bg-white._mob-smaller.__button(href="#") Do not change company details
+        +button()._short._border._border_bg-white._mob-smaller.__button(href="#" data-fancybox-close) Do not change company details
         +button()._short._mob-smaller.__button(href="#") Agree and Continue to KYC form
