--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -85,6 +85,7 @@ include ../blocks/offer-info/offer-info
 include ../blocks/offer-item/offer-item
 include ../blocks/offer-list/offer-list
 include ../blocks/offer-select/offer-select
+include ../blocks/offer-space/offer-space
 include ../blocks/offer/offer
 include ../blocks/offers/offers
 include ../blocks/overlay/overlay
@@ -178,6 +179,7 @@ include ../components/popup-chat/popup-chat
 include ../components/popup-document/popup-document
 include ../components/popup-invoice/popup-invoice
 include ../components/popup-invoices/popup-invoices
+include ../components/popup-new-offer/popup-new-offer
 include ../components/popup-order-summary/popup-order-summary
 include ../components/popup-password-change/popup-password-change
 include ../components/popup-payment-form/popup-payment-form
