--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -84,6 +84,8 @@ block content
         +link(href="#popup-reminder-save").js-popup Popup save terms and conditions
         +link(href="#popup-payment-form").js-popup-top Popup payment form
         +link(href="#popup-warning").js-popup Popup warning
+        +link(href="#popup-new-offer-h").js-popup Popup New Tenancy offer HOST
+        +link(href="#popup-new-offer-g").js-popup Popup New Tenancy offer GUSET
 
 block panels
   +main-menu
@@ -123,3 +125,5 @@ block popups
   +popup-reminder-save#popup-reminder-save
   +popup-payment-form#popup-payment-form
   +popup-warning#popup-warning
+  +popup-new-offer#popup-new-offer-h
+  +popup-new-offer-g#popup-new-offer-g
