--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -171,6 +171,7 @@ $color-compose-text: #a6aab3;
 $color-star-gray: #bcc6ca;
 $color-table-dark: #181c22;
 $color-oi-dark: #575f6a;
+$color-input-dark: #313339;
 
 // ##########
 // Transitions
