--- a/app/blocks/info/info.scss
+++ b/app/blocks/info/info.scss
@@ -22,6 +22,10 @@
     padding: 15px 0;
   }
 
+  &_input {
+    padding: 4px 0;
+  }
+
   &__cell {
     @include heading-3;
 
@@ -58,6 +62,10 @@
 
     &_fz17 {
       @include text-mid;
+    }
+
+    &_fz16 {
+      @include text16;
     }
   }
 
